--- a/templates/base.html
+++ b/templates/base.html
@@ -738,7 +738,7 @@
             <span class="menu-icon">☰</span>
         </button>
         <div class="nav-links" id="nav-links">
-            <a href="/">Home</a>
+            <a href="/">Events</a>
             {% if user %}
             <a href="/teams">Teams</a>
             <a href="/medals">Medals</a>
