--- a/templates/base.html
+++ b/templates/base.html
@@ -1697,7 +1697,7 @@
         // Service Worker registration with update handling
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('/static/sw.js')
+                navigator.serviceWorker.register('/sw.js')
                     .then(function(registration) {
                         swRegistration = registration;
                         console.log('SW registered:', registration.scope);
